Able to launch node

--- a/deep_grasp_vgu/CMakeLists.txt
+++ b/deep_grasp_vgu/CMakeLists.txt
@@ -7,3 +7,20 @@ find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   message_generation
 )
+
+find_package(catkin REQUIRED COMPONENTS rospy roslaunch)
+
+catkin_python_setup()
+
+if(CATKIN_ENABLE_TESTING)
+  roslaunch_add_file_check(launch)
+endif()
+
+catkin_package(CATKIN_DEPENDS rospy)
+
+catkin_install_python(
+  PROGRAMS src/nodes/ggcnn_service.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
+install(DIRECTORY launch/
+        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch)
