--- a/deep_grasp_vgu/deep_grasp_control/package.xml
+++ b/deep_grasp_vgu/deep_grasp_control/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>deep_grasp_vgu</name>
+  <name>deep_grasp_control</name>
   <version>0.0.0</version>
-  <description>The deep_grasp_vgu package</description>
+  <description>The deep_grasp_control package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
