Update save_info to save data

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 #
+*.whl
 datasets/*
 !.gitkeep
 
@@ -131,3 +132,120 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962682_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962682_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962682_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962682_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962682_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962724_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962724_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962724_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962724_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962724_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962740_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962740_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962740_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962740_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962740_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962775_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962775_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962775_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962775_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962775_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962785_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962785_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962785_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962785_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962785_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962816_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962816_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962816_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962816_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962816_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962825_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962825_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962825_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962825_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662962825_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963208_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963208_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963208_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963208_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963208_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963219_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963219_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963219_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963219_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963219_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963229_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963229_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963229_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963229_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963229_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963244_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963244_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963244_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963244_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963244_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963259_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963259_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963259_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963259_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662963259_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964570_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964570_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964570_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964570_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964570_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964578_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964578_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964578_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964578_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964578_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964586_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964586_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964586_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964586_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964586_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964595_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964595_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964595_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964595_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964595_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964604_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964604_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964604_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964604_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964604_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964612_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964612_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964612_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964612_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964612_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964620_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964620_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964620_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964620_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964620_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964643_cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964643_cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964643_camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964643_color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/1662964643_depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/cam_K.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/cam_p.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/camera_rot.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/color.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/depth.npy
+deep_grasp_vgu/deep_grasp_cnn/self_data/depth.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/display.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/pcd0100d.tiff
+deep_grasp_vgu/deep_grasp_cnn/self_data/pcd0100r.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/pcd0101d.tiff
+deep_grasp_vgu/deep_grasp_cnn/self_data/pcd0101r.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/pcd0102d.tiff
+deep_grasp_vgu/deep_grasp_cnn/self_data/pcd0102r.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/pcd0103d.tiff
+deep_grasp_vgu/deep_grasp_cnn/self_data/pcd0103r.png
+deep_grasp_vgu/deep_grasp_cnn/self_data/pcd0104d.tiff
+deep_grasp_vgu/deep_grasp_cnn/self_data/pcd0105d.tiff
