Split grasp control and ggcnn node

--- a/deep_grasp_vgu/deep_grasp_cnn/CMakeLists.txt
+++ b/deep_grasp_vgu/deep_grasp_cnn/CMakeLists.txt
@@ -19,7 +19,7 @@ endif()
 catkin_package(CATKIN_DEPENDS rospy)
 
 catkin_install_python(
-  PROGRAMS scripts/ggcnn_service.py
+  PROGRAMS scripts/ggcnn_node.py scripts/grasp_control.py 
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 install(DIRECTORY launch/
